--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     compile "com.thoughtworks.xstream:xstream:1.4.8"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.2'
 }
 
 compileKotlin {
@@ -56,56 +59,3 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
-generateThriftSource {
-    //
-    // The output directory (optional)
-    //
-    out file('build/generated-src/thrift/main')
-
-    //
-    // -verbose / -debug / -strict (all optional)
-    //
-    verbose false
-    debug false
-    strict false
-
-    //
-    // Modify the include path (optional)
-    //
-    path file('vendor/thrift')
-
-    //
-    // Set the thrift executable (optional)
-    //
-    executable '/usr/bin/thrift'
-
-    generators {
-        //
-        // --gen java:hashcode,beans
-        //
-        java {
-            //
-            // Options passed to the `java` generator
-            //
-            option 'hashcode'
-            option 'beans'
-        }
-
-        //
-        // --gen go
-        //
-        go {
-            //
-            // Output directory can be set on a per-generator basis too
-            //
-            out file('build/generated-src/thrift/go-main')
-        }
-    }
-}
-
-//
-// optional: add generated sources as a source directory in IDEA
-//
-//idea.module.excludeDirs = []
-//idea.module.sourceDirs += file('build/generated-src/thrift/main')
-//idea.module.jdkName = '1.8'
