--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.tester.executor'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.11'
 
     repositories {
         mavenCentral()
@@ -27,14 +27,24 @@ repositories {
         url "http://maven.shadowfacts.net/"
     }
 }
+
 jar {
     manifest {
         attributes "Main-Class": "MainKt"
     }
 
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    from { (configurations.runtime).collect { it.isDirectory() ? it : zipTree(it) } } {
+        exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
     }
+
+    doLast {
+        copyJarToApp.execute()
+    }
+}
+
+task copyJarToApp(type: Copy, dependsOn: [jar]) {
+    from 'build/libs/ThriftConnector-1.0.jar'
+    into 'app'
 }
 
 dependencies {
