--- a/SmartContractExamples/build.gradle
+++ b/SmartContractExamples/build.gradle
@@ -17,5 +17,7 @@ dependencies {
 task copySmartContractJavaClass(type: Copy, dependsOn: [build]) {
     from 'src/main/java/SmartContractTesting.java'
     into '../app/contracts/G2iSMjqaEQmA5pvFuFjKbMqJUxJZceAY5oc1uotr7SZZ/'
+    into '../app/emulationServerContracts/G2iSMjqaEQmA5pvFuFjKbMqJUxJZceAY5oc1uotr7SZZ/'
     delete("../app/contracts/G2iSMjqaEQmA5pvFuFjKbMqJUxJZceAY5oc1uotr7SZZ/state.bin")
+    delete("../app/emulationServerContracts/G2iSMjqaEQmA5pvFuFjKbMqJUxJZceAY5oc1uotr7SZZ/state.bin")
 }
