--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,12 @@ archivesBaseName = "ThriftConnector"
 version = 1.0
 repositories {
     mavenCentral()
-    mavenLocal()
     maven {
         name "shadowfacts"
         url "http://maven.shadowfacts.net/"
+    }
+    flatDir{
+        dirs 'local'
     }
 }
 
@@ -57,6 +59,8 @@ dependencies {
     compile "com.thoughtworks.xstream:xstream:1.4.8"
     compile "com.credits.client:executor_client:1.0"
     compile "com.credits.client:node_client:1.0"
+    compile "com.credits.client:general:1.0"
+    compile "com.credits.sc-api:sc-api:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
