--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.tester.executor'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.40'
 
     repositories {
         mavenCentral()
@@ -21,13 +21,14 @@ archivesBaseName = "ThriftConnector"
 version = 1.0
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         name "shadowfacts"
         url "http://maven.shadowfacts.net/"
     }
-    flatDir{
-        dirs 'local'
-    }
+//    flatDir{
+//        dirs 'local'
+//    }
 }
 
 jar {
@@ -60,7 +61,7 @@ dependencies {
     compile "com.credits.client:executor_client:1.0"
     compile "com.credits.client:node_client:1.0"
     compile "com.credits.client:general:1.0"
-    compile "com.credits.sc-api:sc-api:1.0"
+    compile "com.credits.sc-api:sc-api:2.0-SNAPSHOT"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
